<?xml version="1.0"?>
<package format="2">
  <name>at_home_2021_tmc_task_evaluators</name>
  <version>0.0.0</version>
  <description>The atHome_2021_tmc_task_evaluators package</description>

  <maintainer email="jonatan.gines@urjc.es">jginesclavero</maintainer>
  <license>Apache License, Version 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
